add activeline and fix some bug

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Timeline</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
@@ -50,11 +51,19 @@
         </div>
       </div>
     </div>
-    <div class="d-none d-sm-block timeline-nav mt-5 ">
-      <div class="timeline-nav__item">1<div>gilasweb</div></div>
-      <div class="timeline-nav__item">2<div>gilasweb</div></div>
-      <div class="timeline-nav__item">3<div>gilasweb</div></div>
+    <div class="d-none d-flex justify-content-center mt-5">
+    <i class="bg-white pr-3 fas fa-chevron-left"></i>
+    <div class="activeline d-flex justify-content-between  px-5"></div>
+    <i class="bg-white pl-3 fas fa-chevron-right"></i>
     </div>
+    <center>
+    <div class="d-none d-sm-block timeline-nav">
+      <div class="timeline-nav__item"><div>gilasweb</div></div>
+      <div class="timeline-nav__item"><div>gilasweb</div></div>
+      <div class="timeline-nav__item"><div>gilasweb</div></div>
+    </div>
+    </center>
+
   </div>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
